# 4DEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  test_tesseract.cpp  vcpkg.json
.github/workflows/: build.yml
examples/first_person_test/: main.cpp
examples/meshes/: generate.cpp
include/: AppWindow.hpp  Camera.hpp  Camera3D.hpp  Camera4D.hpp  camera.hpp  math.hpp  mesh.hpp  mesh4d.hpp  renderer.hpp
resources/: mesh4d.fbs
src/: AppWindow.cpp  Camera3D.cpp  Camera4D.cpp  mesh4d.cpp  renderer.cpp
